Fix spacing for header on small screens

--- a/src/containers/Header/header.css
+++ b/src/containers/Header/header.css
@@ -4,6 +4,7 @@
   align-items: center;
   position: relative;
   padding-bottom: 5rem;
+  margin: 3rem auto;
 }
 
 .clipPaths-container {
@@ -13,8 +14,8 @@
 
 .hero-container {
   width: 100%;
-  height: 60vh;
   min-height: 800px;
+  max-height: 60vh;
   background-color: hsl(187deg 93% 13%);
   border-radius: 80px;
   display: flex;
@@ -25,7 +26,7 @@
 
 .hero-column {
   width: 27%;
-  height: 100%;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -84,7 +85,6 @@
 
 .hero-column-right {
   width: 33%;
-  height: 100%;
   flex-direction: column;
   justify-content: center;
   margin-right: -10%;
@@ -141,24 +141,39 @@
     padding-bottom: 0;
   }
   .hero-container {
-    min-height: 0;
-    max-height: 100%;
+    min-height: 60vh;
+    height: auto;
+    max-height: none;
   }
   .hero-column {
     width: 35%;
   }
+  .hero-shape-top-left-container {
+    margin-left: -30%;
+    margin-top: -35%;
+    z-index: 2;
+  }
+
   .hero-shape-middle-left-container {
-    width: 100%;
+    width: 90%;
     padding-top: 100%;
-    margin-top: 0%;
+    margin-top: -15%;
+    margin-left: -20%;
   }
   .hero-shape-bottom-left-container {
-    margin-top: -5%;
+    padding-top: 90%;
+    width: 90%;
+    margin-top: -25%;
     margin-left: -10%;
-    margin-bottom: -22%;
+    margin-bottom: -10%;
   }
   .hero-column-right {
     justify-content: space-between;
+  }
+
+  .hero-text {
+    width: 50%;
+    position: absolute;
   }
 }
 @media screen and (max-width: 768px) {
@@ -166,9 +181,11 @@
     max-height: 670px;
   }
   .hero-container {
-    min-height: 60vh;
-    border-radius: 55px;
-    max-height: 100%;
+    border-radius: 45px;
+  }
+
+  .hero-text {
+    width: 60%;
   }
 }
 
@@ -176,11 +193,9 @@
 
 @media screen and (max-width: 479px) {
   .header-wrapper {
-    max-height: 500px;
     width: 90%;
   }
   .hero-container {
-    height: 75vh;
     border-radius: 35px;
   }
   .hero-text {
