--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,8 @@ button {
   line-height: 1;
   font-weight: 500;
   background-color: #ccfff3;
+  color: var(--main-text-color);
+  -webkit-appearance: none;
 }
 
 h1 {
@@ -120,7 +122,7 @@ h1 {
 1025px — 1200px: Desktops, large screens */
 @media screen and (max-width: 991px) {
   h1 {
-    font-size: 4rem;
+    font-size: 3.7rem;
   }
   .container {
     width: 85%;
@@ -134,7 +136,7 @@ h1 {
     font-size: 3.3rem;
   }
   .main-text {
-    font-size: 1.5rem;
+    font-size: 1.125rem;
     margin-bottom: 1em;
   }
 }
@@ -152,5 +154,8 @@ h1 {
   }
   .content-heading {
     font-size: 1.9rem;
+  }
+  .main-section {
+    padding: 3rem 0;
   }
 }
